Basic layout with placeholders

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --deep-sapphire: #0C4271;
 }
 
-/* BEGIN GLOBAL DEFAULTS */
+/* BEGIN GLOBAL */
 *,
 *::before,
 *::after {
@@ -25,12 +25,36 @@ html {
 }
 
 body {
+    background-color: var(--blue-chill);
+    margin: 10px;
+}
+
+.container-main {
     background-color: var(--linen);
 }
 
-.landing {
-    /*width: 100vw;*/
-    /*height: 100%;*/
+/* BEGIN SEMI-GLOBAL */
+.flex-center-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* BEGIN NAV AND FIXED-BOTTOM-BORDER */
+.nav,
+.fixed-border-bottom {
+    position: fixed;
+    width: 100%;
+}
+
+.nav {
+    top: 0;
+}
+
+.fixed-border-bottom {
+    bottom: 0;
+    height: 10px;
+    background-color: var(--blue-chill);
 }
 
 .nav-ul {
@@ -49,17 +73,39 @@ body {
     outline: 2px solid var(--deep-sapphire);
     border-radius: 25px;
 }
+
 #nav-li-id-1-dev {
     margin-right: auto;
 }
 
-.container-about {
-    height: 425px;
+/* BEGIN LANDING */
+.landing {
+
 }
+
+
+/* BEGIN CONTAINER-ABOUT */
+.container-about {
+    margin-top: 200px; /* ph */
+}
+
+.container-about-info {
+
+}
+
 .container-about-project {
     display: flex;
     justify-content: space-evenly;
+
+    margin-top: 50px;
 }
+
+/* BEGIN CONTAINER-PROJECT */
+.container-projects {
+    margin-top: 200px;
+    /*margin-bottom: 150px;*/
+}
+
 /* extra small and down - phones */
 @media only screen and (max-width: 600px) {
 
@@ -82,16 +128,34 @@ body {
 
 
 /* BEGIN DEV */
+
+
 * {
-    /*outline: 1px solid black;*/
+    /*outline: 1px dashed var(--black);*/
 }
 
+.ph-500x1000 {
+    height: 500px;
+    width: 1000px;
+    margin-top: 150px;
+    outline: solid 1px var(--black);
+    /*background-color: var(--black);*/
+}
+
+.ph-300x1000 {
+    height: 400px;
+    width: 1000px;
+    outline: solid 1px var(--black);
+    /*background-color: var(--black);*/
+}
 .ph-300x240 {
     height: 240px;
     width: 300px;
-
-    background-color: lightseagreen;
+    outline: solid 1px var(--black);
+    /*background-color: var(--black);*/
 }
+
+
 .centered-1 {
     position: fixed;
     top: 10%;
