--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html {
 
 body {
     background-color: var(--blue-chill);
-    margin: 10px;
+    margin: 7px;
 }
 
 .container-main {
@@ -41,16 +41,18 @@ body {
 .fixed-border-bottom {
     position: fixed;
     width: 100%;
+    background-color: var(--blue-chill);
+
 }
 
-.nav {
+.nav,
+.nav-ul {
     top: 0;
 }
 
 .fixed-border-bottom {
     bottom: 0;
-    height: 10px;
-    background-color: var(--blue-chill);
+    height: 7px;
 }
 
 .nav-ul {
@@ -58,23 +60,37 @@ body {
     grid-template-areas:
         'dev spacer portfolio contact about';
     grid-template-columns: 1fr 4fr 1fr 1fr 1fr;
-
-    background-color: var(--blue-chill);
+    justify-items: center;
 }
 
-#nav-li-id-1-dev {grid-area: dev;}
-#nav-li-space {grid-area: spacer;}
-#nav-li-id-2-portfolio {grid-area: portfolio;}
-#nav-li-id-3-contact {grid-area: contact;}
-#nav-li-id-4-about {grid-area: about;}
+#nav-li-id-1-dev {
+    grid-area: dev;
+}
+
+#nav-li-space {
+    grid-area: spacer;
+}
+
+#nav-li-id-2-portfolio {
+    grid-area: portfolio;
+}
+
+#nav-li-id-3-contact {
+    grid-area: contact;
+}
+
+#nav-li-id-4-about {
+    grid-area: about;
+}
 
 .nav-li {
-    margin: 10px;
+    margin: 10px 0;
+    margin-right: 25px;
     padding: 5px 10px;
 }
 
 .nav-li:nth-of-type(5) {
-    margin-right: 25px;
+    /*margin-right: 25px;*/
 }
 
 .nav-li-right:hover {
@@ -98,52 +114,50 @@ body {
 
 }
 
-.grid-col-4 {
+/* BEGIN CONTAINER ABOUT */
+.container-about-project {
     display: grid;
-    grid-column: 2;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-between;
-    align-items: center;
-    /*gap: 1rem;*/
+    grid-template-areas:
+        'img-1'
+        'img-2'
+        'img-3'
+        'img-4';
+    gap: .5rem;
+
+    height: 500px;
 }
 
-.grid-col-2 {
-    grid-column: 2;
-    grid-row: 2;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-
-.grid-about-project-grid-1 {
-    grid-column-start: 1;
-    grid-row-start: 1;
-
-}
-
-.grid-about-project-grid-2 {
-    grid-column-start: 2;
-    grid-row-start: 1;
-}
-
-.grid-about-project-grid-3 {
-    grid-column-start: 1;
-    grid-row-start: 2;
-}
-
-.grid-about-project-grid-4 {
-    grid-column-start: 2;
-    grid-row-start: 2;
-}
-
-.container-about-project img,
-.container-projects img {
+.img-1 {
+    background-image: url("../img/ph-preview.png");
     max-width: 100%;
     height: auto;
-    margin: 0 auto;
+    background-size: cover;
+    border: .3rem solid var(--deep-sapphire);
 }
 
+.img-2 {
+    background-image: url("../img/ph-preview.png");
+    max-width: 100%;
+    height: auto;
+    background-size: cover;
+    border: .3rem solid var(--deep-sapphire);
+}
 
+.img-3 {
+    background-image: url("../img/ph-preview.png");
+    max-width: auto;
+    height: 100%;
+    border: .3rem solid var(--deep-sapphire);
+}
+
+.img-4 {
+    background-image: url("../img/ph-preview.png");
+    max-width: 100%;
+    height: auto;
+    background-size: cover;
+    border: .3rem solid var(--deep-sapphire);
+
+}
 
 /* BEGIN LANDING */
 .landing {
@@ -159,24 +173,13 @@ body {
     /*margin-top: 200px; !* PH *!*/
 }
 
-.container-about-info {
-
-}
-
 .container-about-project {
     /*display: flex;*/
     /*justify-content: space-evenly;*/
 
-    margin-top: 50px;
+    /*margin-top: 50px;*/
 }
 
-/* BEGIN CONTAINER-PROJECT */
-.container-projects {
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 200px; /* PH */
-    /*margin-bottom: 150px;*/
-}
 
 /* extra small and down - phones */
 @media only screen and (max-width: 600px) {
@@ -185,7 +188,11 @@ body {
 
 /* small and up - large phones and tablets */
 @media only screen and (min-width: 600px) {
-
+    .container-about-project {
+        grid-template-areas:
+            'img-1 img-2'
+            'img-3 img-4';
+    }
 }
 
 /* medium and up */
@@ -195,7 +202,10 @@ body {
 
 /* large and up */
 @media only screen and (min-width: 992px) {
-
+    .container-about-project {
+        grid-template-areas:
+            'img-1 img-2 img-3 img-4';
+    }
 }
 
 
@@ -220,6 +230,7 @@ body {
     margin-top: 150px;
     outline: solid 1px var(--black);
     /*background-color: var(--black);*/
+    margin-bottom: 50px;
 }
 
 .ph-300x240 {
@@ -228,31 +239,3 @@ body {
     outline: solid 1px var(--black);
     /*background-color: var(--black);*/
 }
-
-
-.centered-1 {
-    position: fixed;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    outline: none;
-
-}
-
-.centered-2 {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    outline: none;
-}
-
-.centered-3 {
-    position: fixed;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    outline: none;
-}
-
-/* END DEV */
