--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,11 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+
+    /*margin: 0 auto;*/
+    width: 100%;
+    height: auto;
 }
 
 
