--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     --linen: #F9DFDC;
     --blue-chill: #0A81AB;
     --deep-sapphire: #0C4271;
+
+    --dark-gray: #A9A9A9;
 }
 
 
@@ -66,7 +68,7 @@ a {
     display: grid;
     grid-template-areas:
         'dev spacer portfolio contact about';
-    grid-template-columns: 1fr 4fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 3fr 1fr 1fr 1fr;
     justify-items: center;
 }
 
@@ -83,11 +85,29 @@ a {
     padding: .4rem .8rem;
 }
 
+.nav-li:nth-of-type(1) {
+    align-self: center;
+    background-color: var(--black);
+    color: var(--dark-gray);
+    font-family: "Ubuntu Mono", monospace;
+
+    border-radius: .3rem;
+    /*font-size: .7rem;*/
+}
+
+.dev-prompt {
+    animation: dev-prompt 3s linear infinite;
+}
+
+.nav-li:nth-of-type(1) a {
+    color: darkgray;
+}
+
 .nav-li:nth-of-type(5) {
     margin-right: 1.5rem;
 }
 
-.nav-li-right:hover {
+.nav-li:hover {
     /*outline: 2px solid var(--deep-sapphire);*/
     box-shadow: .2rem .2rem .2rem var(--deep-sapphire);
     border-radius: .3rem;
@@ -101,20 +121,42 @@ a {
 /* END NAV AND FIXED-BOTTOM-BORDER */
 
 /* BEGIN MODALS */
-.nav-dev-modal {
+.nav-modal {
     position: absolute;
-    width: 28rem;
-    height: 28rem;
-    left: -50%;
-    top: 15%;
-
     margin: 0 auto;
-    /*z-index: 1;*/
-
-    background-color: var(--white);
+    width: 28rem;
+    height: 18rem;
+    left: -50%;
+    right: -50%;
+    top: 15%;
     color: var(--black);
-    border: .3rem solid var(--deep-sapphire);
-    opacity: .9;
+    background-color: var(--blue-chill);
+    border: .2rem solid var(--deep-sapphire);
+    border-radius: .2rem;
+}
+
+.nav-modal-dev {
+    background-color: var(--black);
+    color: var(--dark-gray);
+}
+
+h5 {
+    text-align: end;
+    background-color: var(--blue-chill);
+    cursor: pointer;
+}
+h6 {
+    margin: 1rem 0 1rem 3rem;
+    font-size: 1rem;
+}
+
+.nav-modal-dev {
+    height: 18rem;
+}
+.nav-modal-dev li {
+    margin:  0 0 1rem 3rem;
+    font-family: "Ubuntu Mono", monospace;
+    list-style: none;
 }
 
 .flex-cen-cen {
@@ -123,9 +165,10 @@ a {
     align-items: center;
     flex-direction: column;
 
-    /*margin: 0 auto;*/
-    width: 100%;
+    margin: 0 auto;
+    max-width: 100%;
     height: auto;
+    font-family: "Ubuntu Mono", monospace;
 }
 
 
