--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root {
     --white: #FFFFFF;
@@ -89,7 +88,7 @@ a {
     align-self: center;
     background-color: var(--black);
     color: var(--dark-gray);
-    font-family: "Ubuntu Mono", monospace;
+    font-family: "Roboto Mono", monospace;
 
     border-radius: .3rem;
     /*font-size: .7rem;*/
@@ -147,16 +146,17 @@ h5 {
 }
 h6 {
     margin: 1rem 0 1rem 3rem;
-    font-size: 1rem;
+    font-size: .9rem;
 }
 
 .nav-modal-dev {
     height: 18rem;
 }
 .nav-modal-dev li {
-    margin:  0 0 1rem 3rem;
-    font-family: "Ubuntu Mono", monospace;
+    margin:  0 0 .5rem 3rem;
+    font-family: "Roboto Mono", monospace,;
     list-style: none;
+    font-size: .9rem;
 }
 
 .flex-cen-cen {
@@ -168,7 +168,7 @@ h6 {
     margin: 0 auto;
     max-width: 100%;
     height: auto;
-    font-family: "Ubuntu Mono", monospace;
+    font-family: "Roboto Mono", monospace;
 }
 
 
