--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a {
     display: grid;
     grid-template-areas:
         'dev spacer portfolio contact about';
-    grid-template-columns: 2fr 3fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
     justify-items: center;
 }
 
@@ -77,7 +77,7 @@ a {
 #nav-li-id-2-portfolio {grid-area: portfolio;}
 #nav-li-id-3-contact {grid-area: contact;}
 #nav-li-id-4-about {grid-area: about;}
-/*!* @formatter:on *!*/
+/* @formatter:on */
 
 .nav-li {
     margin: .6rem 0;
@@ -89,9 +89,8 @@ a {
     background-color: var(--black);
     color: var(--dark-gray);
     font-family: "Roboto Mono", monospace;
-
+    font-size: .9rem;
     border-radius: .3rem;
-    /*font-size: .7rem;*/
 }
 
 .dev-prompt {
@@ -132,33 +131,48 @@ a {
     background-color: var(--blue-chill);
     border: .2rem solid var(--deep-sapphire);
     border-radius: .2rem;
+    font-family: "Roboto Mono", monospace;
 }
 
+/* returnreturn - if no other modals, combine this with above */
 .nav-modal-dev {
     background-color: var(--black);
     color: var(--dark-gray);
 }
 
-h5 {
+.dev-modal-term-controls {
     text-align: end;
     background-color: var(--blue-chill);
     cursor: pointer;
+    /*font-family: poppins;*/
 }
-h6 {
+
+.dev-modal-prompt {
     margin: 1rem 0 1rem 3rem;
     font-size: .9rem;
 }
 
-.nav-modal-dev {
-    height: 18rem;
+.dev-modal-input {
+    font-weight: 900;
 }
+
 .nav-modal-dev li {
-    margin:  0 0 .5rem 3rem;
-    font-family: "Roboto Mono", monospace,;
+    margin: 0 0 .5rem 3rem;
+    font-family: "Roboto Mono", monospace;
     list-style: none;
     font-size: .9rem;
 }
 
+.nav-modal-dev li > a {
+    color: var(--dark-gray);
+}
+
+.nav-modal-dev li > a:hover {
+    color: var(--white);
+    font-weight: 900;
+}
+
+/* returnreturn - working class */
 .flex-cen-cen {
     display: flex;
     justify-content: center;
@@ -170,7 +184,6 @@ h6 {
     height: auto;
     font-family: "Roboto Mono", monospace;
 }
-
 
 /* BEGIN LANDING */
 .landing {
